[package]
name = "cuda-discovery"
version = "0.1.0"
edition = "2021"
description = "Agent capability discovery and peer finding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-discovery"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

